--- a/popup.html
+++ b/popup.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <h1>&#x1F5FA;&#xFE0F; Scrapear Google Maps</h1>
-  <div id="message">Checkeando URL...</div>
+  <div id="message">Checkeando URL..</div>
   <button id="actionButton" class="button" disabled>Scrapear</button>
   <button id="downloadCsvButton" class="button" style="margin-left: 10px;" disabled>Descargar como CSV</button>
   <input type="text" id="filenameInput" class="input" placeholder="Enter file name" style="margin-left: 10px;" />
